@@ -40,6 +40,7 @@ PHP                                                                        NEWS
 - Fixed htmlentities/htmlspecialchars not to accept partial multibyte
   sequences. (Stas)
 
+- Fixed bug #43130 (Bound parameters cannot have - in their name). (Ilia)
 - Fixed bug #43099 (XMLWriter::endElement() does not check # of params).
   (Ilia)
 - Fixed bug #43020 (Warning message is missing with shuffle() and more
